vlib/v/checker/tests/fn_array_decompose_arg_mismatch_err_b.vv
struct Foo1 {
}

struct Foo2 {
}

type Foo = Foo1 | Foo2

fn f(v ...Foo) {
	println(v)
}

fn main() {
	f(...[Foo1{}, Foo1{}])
}
